[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Weapon.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.1, 0.1, 0.2 )

[node name="Gun" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.633989, -0.288, -0.690845 )
script = ExtResource( 1 )
dispersion = 0.01
ammo_label = NodePath("../../../UI/AmmoPanel/AmmoLabel")
raycast = NodePath("../../RayCast")
sound_player = NodePath("SoundPlayer")

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer3D" parent="."]

[node name="BulletTrailOrigin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.013791, 0.00821209, -0.11639 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.173648, -0.984808, 0, 0.984808, 0.173648, 0, -0.0660586, 0.114599 )
mesh = SubResource( 6 )

[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
